--- a/Admin/src/app/customer-management/customer-management.component.css
+++ b/Admin/src/app/customer-management/customer-management.component.css
@@ -332,7 +332,7 @@ button.close-btn:hover, button.reset-btn:hover {
 }
 .search-icon {
   position: absolute;
-  left: 10px;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
   color: #f38a95;
@@ -442,9 +442,7 @@ button.close-btn:hover, button.reset-btn:hover {
 
 .content-box-table {
   width: 100%;
-  margin-top: 60px;
-  /* height: 500px; */
-  /* overflow-y: scroll; */
+  margin-top: 10px;
 }
 
 .content-box-table table {
@@ -498,4 +496,12 @@ button.close-btn:hover, button.reset-btn:hover {
 .paginate-active {
   background-color: #E75C6B;
   color: #fff;
+}
+.edit-icon {
+  color: rgb(24, 225, 24);
+  margin-right: 10px;
+}
+
+.delete-icon {
+  color: red;
 }
