--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
@@ -17,6 +17,42 @@
     float: right;
 }
 
+:root {
+  --primary_color: #e75c6b;
+}
+h4 {
+  width: 100%;
+  font-size: 40px;
+  color: var(--primary_color);
+  font-weight: bold;
+  margin: auto;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 20px;
+}
+
+.order-detail {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  width: 70%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 h3{
   color: #E75C6B;
  font-weight: bold;
