--- a/Client/src/app/header/header.component.html
+++ b/Client/src/app/header/header.component.html
@@ -11,69 +11,64 @@
       </form>
      </div>
       <div class="right-header-top">
-          <div class="account">
-              <a href="#" >
-                  <i class="fa-solid fa-user"></i>
-                 <span>Tài khoản</span>
-              </a>
-              <ul class="sub-nav">
-                  <li class="">
-                      <a href="./myAccount">
-                          <i class="fa-solid fa-user"></i> Tài khoản của tôi
-                      </a>
-                  </li>
-                  <li class="register" *ngIf="!login">
-                      <a routerLink="register">
-                          <i class="fa-solid fa-user-plus register" ></i> Đăng kí
-                      </a>
-                  </li>
-                  <li class="login" *ngIf="!login">
-                      <a routerLink="/getlogin" >
-                          <i class="fa-solid fa-right-to-bracket" ></i> Đăng nhập
-                      </a>
-                  </li>
-                  <li class="logout" *ngIf="login">
-                      <a (click)="logout()" >
-                          <i class="fa-solid fa-right-to-bracket"   ></i> Đăng xuất
-                      </a>
-                  </li>
+          <div class="isLogin">
 
-              </ul>
-          </div>
+                <a routerLink="/getlogin"  *ngIf="!login" >
+                    <i class="fa-solid fa-right-to-bracket" ></i> Đăng nhập
+                </a>
+              </div>
+              <div class="isLogin">
+                <a routerLink="register" *ngIf="!login">
+                  <i class="fa-solid fa-user-plus register" ></i> Đăng kí
+                </a>
+              </div>
+              <div class="isLogin">
+                <a routerLink="./myAccount" *ngIf="login">
+                  <img style="width: 50px;height: 50px;border-radius: 50%;" src="{{user.Image}}" alt="">@{{user.UserName}}
+                </a>
+              </div>
+
+
+
           <div class="cart">
-              <a href="./getcart">
+              <a routerLink="./getcart">
                   <i class="fa-solid fa-cart-shopping"></i>
                   <span>Giỏ hàng</span></a>
           </div>
           <div class="phone">
-              <a href="#">
+              <a routerLink="#">
                   <i class="fa-solid fa-phone"></i>
                   <span> 0905792559</span>
               </a>
           </div>
+          <div class="isLogin">
+            <a (click)="logout()" style="cursor: pointer;" *ngIf="login">
+              <i class="fa-solid fa-right-to-bracket"   ></i> Đăng xuất
+             </a>
+            </div>
       </div>
   </div>
   <div class="header-bottom">
       <ul class="nav">
           <li>
-                  <a href="./listProduct">
+                  <a routerLink="./listProduct">
                       <i class="fa-sharp fa-solid fa-list"></i>
                       Danh mục sản phẩm
                       <i class="nav-arrow-down ti-angle-down"></i>
                   </a>
                   <ul class="sub-nav">
-                      <li class="type_category"><a href="./productBanhkem.html"> Bánh kem</a></li>
-                      <li class="type_category"><a href="./productCupcakes.html"> Cupcakes</a></li>
-                      <li class="type_category"><a href="./productBanhquy.html"> Bánh quy</a></li>
-                      <li class="type_category"><a href="./productDonuts.html"> Donuts</a></li>
-                      <li class="type_category"><a href="./productBanhmi.html"> Bánh mì</a></li>
+                      <li class="type_category"><a routerLink="./productBanhkem.html"> Bánh kem</a></li>
+                      <li class="type_category"><a routerLink="./productCupcakes.html"> Cupcakes</a></li>
+                      <li class="type_category"><a routerLink="./productBanhquy.html"> Bánh quy</a></li>
+                      <li class="type_category"><a routerLink="./productDonuts.html"> Donuts</a></li>
+                      <li class="type_category"><a routerLink="./productBanhmi.html"> Bánh mì</a></li>
                   </ul>
           </li>
-          <li class="main now"><a href=""><span> Trang chủ</span></a></li>
-          <li class="promotion"><a href="./promotion">Khuyến mãi</a></li>
-          <li class="story btnn"><a href="./aboutUs">Câu chuyện thương hiệu</a></li>
-          <li class="blog"><a href="./blog">Tin tức</a></li>
-          <li class="contact"><a href="./contact">Liên hệ</a></li>
+          <li class="main now"  ><a class="link-btn" routerLink=""><span> Trang chủ</span></a></li>
+          <li class="promotion" ><a  class="link-btn" routerLink="./promotion">Khuyến mãi</a></li>
+          <li class="story btnn"><a routerLink="./aboutUs">Câu chuyện thương hiệu</a></li>
+          <li class="blog"><a routerLink="./blog">Tin tức</a></li>
+          <li class="contact"><a routerLink="./contact">Liên hệ</a></li>
       </ul>
   </div>
 </div>
