--- a/Client/src/app/my-account/my-account.component.html
+++ b/Client/src/app/my-account/my-account.component.html
@@ -44,7 +44,7 @@
         </li>
 
         <li id="sub-nav_profile8">
-          <button class="link-btn" (click)="onSelectSubComponent('logout')"><i style="padding-right: 6px" class="fa-solid fa-arrow-right-from-bracket"></i> Đăng xuất</button>
+          <button class="link-btn" (click)="logout()" ><i style="padding-right: 6px" class="fa-solid fa-arrow-right-from-bracket"></i> Đăng xuất</button>
         </li>
       </ul>
     </div>
