--- a/Admin/src/app/promotion-management/promotion-management.component.html
+++ b/Admin/src/app/promotion-management/promotion-management.component.html
@@ -1,31 +1,21 @@
 <div>
-    <div>
         <div class="row">
             <div class="header-box">
                 <h1>Danh sách khuyến mãi</h1>
-                <button (click)="actionAdd()"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                  </svg> Thêm khuyến mãi</button>
             </div>
         </div>
         <hr>
-        <div class="d-flex justify-content-between">
-            <div class="sort-function">
-                <select class="form-select">
-                    <option selected>Sắp xếp theo:</option>
-                    <option value="sort_name">Tăng dần theo mức giảm</option>
-                    <option value="sort_date_decrease">Ngày bắt đầu tăng dần</option>
-                    <option value="sort_date_increase">Ngày bắt đầu giảm dần</option>
-                </select>
+        <div class="content-box-action">
+            <div class="content-box-action-container--button">
+              <button (click)="showPromotionNew()" class="content-box-action--button">Thêm khuyến mãi mới</button>
             </div>
-        <div class="search-box">
-          <form class="d-flex">
-            <input class="form-control me-2" style="width: 400px;" type="search" placeholder="Tìm kiếm..." aria-label="Search">
-            <button class="btn btn-outline-success" style="width: 40px;" type="submit"><i class="fa fa-search"></i></button>
-          </form>
+            <form (ngSubmit)="submitForm()" class="content-box-action--search">
+              <input class="content-box-action--search-input" [(ngModel)]="search" name="search"
+                  placeholder="Tìm Kiếm . . ." />
+              <fa-icon (click)="submitForm()" [icon]="faSearchPlus" [style]="{cursor: 'pointer'}" size="lg"
+                  class="search-icon"></fa-icon>
+            </form>
         </div>
-      </div>
       <div class="display-list mt-3">
         <table class="table text-center table-hover">
           <thead>
@@ -46,93 +36,136 @@
                 <td>{{p.Quantity}}</td>
                 <td>{{p.Condition}}</td>
                 <td>{{p.StartDate}}</td>
-                <td>{{p.ExpireDate}}</td>  
+                <td>{{p.ExpireDate}}</td>
               <td class="d-flex justify-content-end" >
-                <div>
-                    <a class="delete" (click)="deletePromotion(p._id)"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
-                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
-                      </svg></a>
-                    <a class="detail" href="./promotion_detail/{{p._id}}"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
-                        <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
-                        <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
-                      </svg></a>
-              </div>
+                <fa-icon (click)="showPromotionDetail(p)" [icon]="faEdit" class="edit-icon"
+                [style]="{cursor: 'pointer'}" size="lg"></fa-icon>
+                <fa-icon
+                [swal]="{ title: 'Bạn có chắc chắn muốn xoá ', showCancelButton: true }"
+                (confirm)="deletePromotion(p._id)" (dismiss)="handleDismiss($event)"
+                [icon]="faDelete" class="delete-icon" [style]="{cursor: 'pointer'}"
+                size="lg"></fa-icon>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
+      <div class="pagination-container">
+        <p (click)="paginateIcon('pre')"><i class="fa-solid fa-chevron-left"></i></p>
+        <ul>
+            <li *ngFor="let i of totalPage; let indexOfElement=index" (click)="paginate(indexOfElement + 1)"
+                [class.paginate-active]="page == indexOfElement + 1">{{indexOfElement + 1}}</li>
+        </ul>
+        <p (click)="paginateIcon('next')"><i class="fa-solid fa-chevron-right"></i></p>
     </div>
 </div>
-<div class="fog" *ngIf="isShow">
-  <div class="form">
-    <h1 class="text-center mt-5 mb-4">TẠO MÃ KHUYẾN MÃI MỚI</h1>
-    <form>
-      <div class="row mb-3">
-        <label for="PromotionId" class="col-sm-3 col-form-label">ID</label>
-        <div class="col-sm-9">
-            <input class="form-control" name="PromotionId" id="PromotionId">
-        </div>
-      </div>
-        <div class="row mb-3">
-            <label for="Code" class="col-sm-3 col-form-label">Mã khuyến mãi</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" name="Code" id="Code" placeholder="Nhập mã khuyến mãi">
+
+<div *ngIf="showDetail" class="modal">
+  <div class="promotion-detail">
+    <div class="title">Chi tiết khuyến mãi {{selectedPromotion.Code}}</div>
+    <div class="information">
+      <div class="sub_title">Thông tin chung</div>
+      <hr>
+      <div class="row">
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Mã khuyến mãi:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.Code}}">
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="Name" class="col-sm-3 col-form-label">Mô tả</label>
-            <div class="col-sm-9" >
-                <angular-editor name="Name" id="Name" placeholder="Mô tả về mã khuyến mãi" [config]="config" ></angular-editor>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Mô tả:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.Name}}">
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="Discount" class="col-sm-3 col-form-label ">Mức giảm giá</label>
-            <div class="col-sm-9 d-flex">
-                <input type="text" class="form-control" id="Discount" name="Discount" placeholder="Nhập mức giảm giá">
-                <span>
-                    <select class="form-select form-control flex-fill mx-md-1" id="DiscountType" name="DiscountType">
-                        <option value="%">%</option>
-                        <option value="VND">VND</option>
-                    </select>
-                </span>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Mức giảm:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.Discount}}">
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="Condition" class="col-sm-3 col-form-label">Điều kiện áp dụng giảm giá</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" name="Condition" id="Condition" placeholder="Nhập điều kiện để đơn hàng áp dụng khuyến mãi">
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Số lượng:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.Quantity}}">
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="Quantity" class="col-sm-3 col-form-label">Số lượng</label>
-            <div class="col-sm-9">
-                <input type="text" class="form-control" id="Quantity" name="Quantity" placeholder="Nhập số lượng mã khuyến mãi">
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Điều kiện:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.Condition}}">
             </div>
-        </div>
-        <div class="row mb-3">
-          <label for="CreatedDate" class="col-sm-3 col-form-label">Thời gian khởi tạo</label>
-          <div class="col-sm-9">
-              <input type="text" class="form-control" id="CreatedDate" name="CreatedDate"placeholder="Thời gian khởi tạo">
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Ngày khởi tạo:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.CreatedDate}}">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Ngày bắt đầu:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.StartDate}}">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-5 col-form-label">Ngày kết thúc:</label>
+            <div class="col-sm-7">
+              <input type="text" readonly="" class="form-control-plaintext" value="{{selectedPromotion.ExpireDate}}">
+            </div>
           </div>
       </div>
-        <div class="row mb-3">
-            <label for="StartDate" class="col-sm-3 col-form-label">Thời gian bắt đầu</label>
-            <div class="col-sm-9">
-                <input type="date" class="form-control" id="StartDate" name="StartDate"placeholder="Chọn thời gian bắt đầu">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="ExpireDate" class="col-sm-3 col-form-label">Thời gian kết thúc</label>
-            <div class="col-sm-9">
-                <input type="date" class="form-control" id="ExpireDate" name="ExpireDate"placeholder="Chọn thời gian kết thúc">
-            </div>
-        </div>
-        <div class="d-flex justify-content-end" >
-          <button (click)="postPromotion()" type="cancel" class="btn">Tạo mới</button>
-            <button (click)="actionCancel()" type="cancel" class="btn">Hủy bỏ</button>
-        </div>
-    </form>
+    </div>
+    <div class="function">
+      <button class ="close-btn" (click)="closePromotionDetail()">Quay lại</button>
+    </div>
+  </div>
 </div>
+
+
+<div *ngIf="showAddPromotion" class="modal">
+  <div class="promotion-new">
+    <div class="title">Tạo mã khuyến mãi mới</div>
+    <p>Để tạo mã khuyến mãi mới, vui lòng điền các thông tin dưới đây:</p>
+    <div class="information">
+      <form >
+        <div class="col">
+          <input type="text" class="form-control" name="Code" id="Code" placeholder="Mã khuyến mãi:" required  [(ngModel)]="promotion.Code">
+        </div>
+        <div class="col">
+          <input type="text"class="form-control" name="Name" id="Name" placeholder="Mô tả" required  [(ngModel)]="promotion.Name">
+        </div>
+
+        <div class="col">
+          <input type="text" class="form-control" name="Discount" id="Discount" placeholder="Mức giảm:"[(ngModel)]="promotion.Discount" >
+        </div>
+
+        <div class="col">
+          <input type="text" class="form-control" name="Quantity" id="Quantity" placeholder="Số lượng:"[(ngModel)]="promotion.Quantity" >
+        </div>
+
+        <div class="col">
+          <input type="text" class="form-control" name="Condition" id="Condition" placeholder="Điều kiện:"[(ngModel)]="promotion.Condition" >
+        </div>
+
+        <div class="col">
+          <input type="date" class="form-control" name="StartDate" id="StartDate" placeholder="Ngày bắt đầu:"[(ngModel)]="promotion.StartDate" >
+        </div>
+
+        <div class="col">
+          <input type="date" class="form-control" name="ExpireDate" id="ExpireDate" placeholder="Ngày kết thúc:"[(ngModel)]="promotion.ExpireDate" >
+        </div>
+
+        <div class="button">
+          <button type="button" class="btn btn-primary input" (click)="closePromotionNew()">
+                  Trở lại
+          </button>
+          <button type="button" class="btn btn-primary input" (click)="postPromotion()" style="margin-left: 20px;">
+            Hoàn thành
+        </button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
