update thêm promotion

--- a/Admin/src/app/promotion-management/promotion-management.component.html
+++ b/Admin/src/app/promotion-management/promotion-management.component.html
@@ -150,11 +150,11 @@
         </div>
 
         <div class="col">
-          <input type="date" class="form-control" name="StartDate" id="StartDate" placeholder="Ngày bắt đầu:"[(ngModel)]="promotion.StartDate" >
+          <input type="date" class="form-control" name="StartDate" id="StartDate" placeholder="Ngày bắt đầu:"[(ngModel)]="formattedStartDate" >
         </div>
 
         <div class="col">
-          <input type="date" class="form-control" name="ExpireDate" id="ExpireDate" placeholder="Ngày kết thúc:"[(ngModel)]="promotion.ExpireDate" >
+          <input type="date" class="form-control" name="ExpireDate" id="ExpireDate" placeholder="Ngày kết thúc:"[(ngModel)]="formattedExpireDate" >
         </div>
 
         <div class="button">
