--- a/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
+++ b/Admin/src/app/quan-ly-don-hang/quan-ly-don-hang.component.css
@@ -36,7 +36,7 @@ h4 {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   width: 70%;
-  height: 100%;
+  height: auto;
   overflow-y: auto;
 }
 
@@ -44,13 +44,16 @@ h4 {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.swal2-container {
+  z-index:1000;
 }
 
 h3{
@@ -169,4 +172,135 @@ label{
 .paginate-active {
   background-color: #E75C6B;
   color: #fff;
+}
+/*  */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css?family=Inter:400,800');
+
+h2 {
+  color: #E75C6B;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.donhang-container {
+  padding: 0;
+  margin: 0 100px 0 100px;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.donhang-header {
+  display: grid;
+  grid-template-columns: 3fr 2fr 2fr 1.5fr;
+  text-align: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 10px 0 10px 0;
+  background-color: #E75C6B;
+  color: white;
+}
+
+.donhang-product {
+  display: grid;
+  grid-template-columns: 3fr 2fr 2fr 1.5fr;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: 'Inter', sans-serif;
+  word-spacing: 2px;
+  padding: 10px 0;
+}
+
+.product-description {
+  text-align: left;
+  padding-left: 10%;
+}
+
+
+.currency {
+  text-align: left;
+  margin-left: 20px;
+}
+
+.quantity-box {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.left {
+  float: left;
+  width: 60%;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+
+  font-family: 'Inter', sans-serif;
+
+}
+
+.tongtien {
+  width: 90%;
+  border-radius: 20px;
+}
+
+.container_detail {
+  width: 86%;
+  display: flex;
+}
+
+.right {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+
+.right textarea {
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px 0;
+  height: 150px;
+}
+
+.btn-container {
+  display: flex;
+}
+
+.button,
+.cancel-button {
+  text-align: right;
+  margin-right: 10px;
+  height: 60px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+  padding: 10px 20px;
+}
+
+.button {
+  background-color: #E75C6B;
+  color: #fff;
+}
+
+.cancel-button {
+  background-color: rgb(232, 220, 220);
+  color: #000;
+}
+
+.btn {
+  padding-top: 20px;
+
+  width: 300px;
+  float: right;
+}
+
+table {
+  border-spacing: 10px;
 }
