--- a/Client/src/app/register/register.component.html
+++ b/Client/src/app/register/register.component.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-input">
                   <span><i class="fa fa-key"></i></span>
-                  <input [(ngModel)]="rePassword" type="password" name="ngModel" placeholder="Nhập lại mật khẩu" id="repassword" required>
+                  <input [(ngModel)]="rePassword" type="password" name="repassword" placeholder="Nhập lại mật khẩu" id="repassword" #repassword="ngModel" required>
                 </div>
 
                 <div class="mb-3">
