--- a/Client/src/app/header/header.component.html
+++ b/Client/src/app/header/header.component.html
@@ -5,10 +5,9 @@
      </div>
      <div class="btn-search" >
       <form class="inputSearch" onsubmit="submitForm(event)">
-          <input type="text" class="search" id="inputvalue">
-
-          <button class="ti-search"></button>
-      </form>
+        <input type="text" class="search" id="inputvalue" placeholder="Tìm kiếm">
+        <button class="ti-search"><i style="color: var(--primary_color);font-size: 25px;display: flex; align-items: center;"  class="fa-solid fa-magnifying-glass"></i></button>
+    </form>
      </div>
       <div class="right-header-top">
           <div class="isLogin">
